After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776244 - tsdemux: Taglist leak
tsdemux: Taglist leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-18 19:21 UTC by minfrin
Modified: 2016-12-22 12:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't leak a taglist if a taglist has already been created. (1.07 KB, patch)
2016-12-18 19:22 UTC, minfrin
committed Details | Review

Description minfrin 2016-12-18 19:21:11 UTC
We don't check if the taglist exists already before creating it.
Comment 1 minfrin 2016-12-18 19:22:22 UTC
Created attachment 342180 [details] [review]
Don't leak a taglist if a taglist has already been created.
Comment 2 Sebastian Dröge (slomo) 2016-12-19 09:02:43 UTC
commit b5791efcc0290780f7bbedc80bde007b28dc3219
Author: Graham Leggett <minfrin@sharp.fm>
Date:   Sun Dec 18 19:18:23 2016 +0000

    tsdemux: Don't leak a taglist if a taglist has already been created
    
    https://bugzilla.gnome.org/show_bug.cgi?id=776244