tsdemux: Don't leak a taglist if a taglist has already been created

https://bugzilla.gnome.org/show_bug.cgi?id=776244